--- a/src/css/create.css
+++ b/src/css/create.css
@@ -1,5 +1,5 @@
-.header {
-	position: fixed;
+.main {
+	justify-content: space-around;
 }
 
 .create-part {
@@ -13,27 +13,30 @@
 
 .create-button,
 .add-button {
+	margin: 20px;
 	background-color: #fa0000;
-	padding: 5px 20px 5px 20px;
+	padding: 10px 20px;
 	color: white;
 	font-weight: bold;
 	font-size: 0.8em;
 }
 
-.main {
-	display: block;
-	padding-top: 70px;
-	height: auto;
+.main-left,
+.main-right {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
 }
 
 .main-left {
-	position: fixed;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	height: calc(100% - 70px);
 	width: 30%;
+	justify-content: center;
+}
+
+.main-right {
+	flex: 25%;
+	overflow-y: scroll;
 }
 
 .body-image {
@@ -63,27 +66,13 @@ img {
 	border: 1px solid black;
 }
 
-.main-right {
-	padding-top: 50px;
-	padding-bottom: 20px;
-	padding-left: 30%;
-	height: auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-around;
-}
-
 .container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	padding: 0;
 }
 
 .create-container {
-	margin: 20px;
+	margin: 40px;
 	background-color: #ffb8b1;
-	width: 90%;
 	height: 25vh;
 	display: flex;
 	flex-direction: column;
@@ -155,9 +144,5 @@ label {
 
 	.mobile {
 		display: flex;
-	}
-
-	.create-container {
-		width: 100%;
 	}
 }
