--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,13 @@ body {
 	height: 100vh;
 	padding: 0vh 4vw 0 4vw;
 	background: #ffb8b1c7;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+main {
+	width: 100%;
 }
 
 .img {
@@ -34,6 +41,7 @@ body {
 	padding: 5px;
 	display: flex;
 	flex-flow: column;
+	justify-content: center;
 }
 
 .form a {
@@ -50,9 +58,8 @@ body {
 }
 
 .title {
-	font-size: 60px;
+	font-size: 5vh;
 	color: #bc002d;
-	line-height: 90px;
 }
 
 .error {
@@ -72,7 +79,7 @@ body {
 
 .form .label {
 	position: absolute;
-	top: 61px;
+	top: 58px;
 	left: 20px;
 	color: #bc002d;
 	transition: all 0.5s ease;
@@ -80,7 +87,7 @@ body {
 
 .form .input {
 	width: 100%;
-	margin-top: 50px;
+	margin-top: 48px;
 	padding: 10px 0;
 	padding-left: 18px;
 	border-radius: 80px;
@@ -96,7 +103,7 @@ body {
 /* If the input is focus or filled in (even invalid), move the label out of the way */
 .form .input:focus + .label,
 .form .input:not(:placeholder-shown) + .label {
-	transform: translate(5px, -44px) scale(1.3);
+	transform: translate(8px, -44px) scale(1.3);
 }
 
 .form i {
@@ -165,7 +172,7 @@ body {
 
 .form .submit {
 	border: 4px solid #ff5e83;
-	margin-top: 50px;
+	margin-top: 48px;
 	border-radius: 80px;
 	height: 50px;
 	background: #bc002d;
@@ -184,18 +191,17 @@ body {
 #forgot-form,
 #info-form {
 	position: absolute;
-	top: 10vh;
-	width: 80vw;
-	left: 10vw;
-	padding: 20px;
+	top: 5vh;
+	left: 5vw;
+	width: 90vw;
 	height: 0;
 	border: 1px solid;
 	border-radius: 10px;
 	background: #ffdcdc;
 	display: flex;
-	flex-flow: column;
 	opacity: 0;
 	transition: all 0.5s ease;
+	overflow: auto;
 }
 
 #forgot-form *,
@@ -205,7 +211,7 @@ body {
 
 .overlay {
 	content: '';
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100vw;
@@ -245,9 +251,14 @@ body {
 	display: block;
 }
 
+.show {
+	padding: 20px;
+}
+
 #forgot-form.show {
 	opacity: 1;
 	height: 70vh;
+	top: 15vh;
 }
 
 #info-form.show {
@@ -289,14 +300,29 @@ body {
 	display: block;
 	margin: auto;
 	margin-top: 10px;
-	width: 40vw;
+	width: 36vw;
 }
 
 .big {
 	display: none;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (orientation: landscape) {
+	#info-form.show,
+	#forgot-form.show {
+		display: block;
+	}
+	#info-form.show .label,
+	#forgot-form.show .label {
+		top: 10px;
+	}
+	#info-form.show .submit,
+	#forgot-form.show .submit {
+		width: 100%;
+	}
+}
+
+@media only screen and (min-width: 800px) {
 	body {
 		display: flex;
 		align-items: center;
@@ -315,6 +341,10 @@ body {
 		flex-flow: row-reverse;
 		justify-content: center;
 		align-items: center;
+	}
+
+	.title {
+		font-size: 50px;
 	}
 
 	.img {
@@ -339,11 +369,17 @@ body {
 	}
 
 	#forgot-form.show {
+		top: 15vh;
 		height: 70vh;
 	}
 
+	#info-form.show {
+		top: 5vh;
+		height: 90vh;
+	}
+
 	#info-form .preview img {
-		margin-top: 30px;
-		width: 20vw;
+		margin-top: 10px;
+		width: 240px;
 	}
 }
